name:                BlogLiterately-diagrams
version:             0.1.0.0
synopsis:            Include images in blog posts with inline diagrams code
description:         XXX
license:             BSD3
license-file:        LICENSE
author:              Brent Yorgey
maintainer:          byorgey@cis.upenn.edu
copyright:           Copyright 2012 Brent Yorgey
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     darcs
  location: http://code.haskell.org/~byorgey/code/BlogLiterately-diagrams

library
  default-language:    Haskell2010
  exposed-modules:     Text.BlogLiterately.Diagrams
  build-depends:       base >= 4.3 && < 4.6,
                       containers,
                       filepath,
                       diagrams-cairo >= 0.5 && < 0.6,
                       diagrams-builder ==0.2.*,
                       diagrams-lib ==0.5.*,
                       BlogLiterately ==0.5.*,
                       pandoc ==1.9.*,
                       safe ==0.3.*
  hs-source-dirs:      src